smal fixes on mobile display

--- a/app/assets/stylesheets/hrservices/_index.scss
+++ b/app/assets/stylesheets/hrservices/_index.scss
@@ -65,8 +65,8 @@
 
 .price {
   position: relative;
-  top: 1.5vh;
-  right: 3vh;
+  top: 2vh;
+  right: 5vh;
   font-size: 16px;
 }
 
